<resources>
    <string name="app_name">RedeMicro</string>
    <string name="linkapp">http://www.link.com</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_noticias">NoticiasActivity</string>
    <string name="mensagem_login">Bem vindo ao RedeMicro!\n\n\nAntes de começar a usar o aplicativo precisamos saber um pouco mais sobre você.\n\nNecessitamos de seus dados básicos para ter acesso à todas as funcionalidades do sistema.\n\n Disponibilizamos o freeds de Notícias para utilização sem cadastro".</string>
    <string name="pular">Pular</string>
    <string name="revoke_decision">Reveja sua decisão</string>
    <string name="why_we_need_permission_all">Precisamos de todas as permissões para o correto funcionamento da aplicaçao</string>
    <string name="i_dont_care">Não me importo</string>
    <string name="ok">Ok</string>
    <string name="why_we_need_permission_accounts">Sem a permissão de ler as contas de usuário de seu smartphone não será possível fazer login com o Google. Favor ative a permissão ou escolha outra forma de autenticação.</string>
    <string name="title_activity_mostrar_perfil">MostrarPerfilActivity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="titulo_fazer_login">Lazer login</string>
    <string name="titulo_Perfil">Completar perfil</string>
    <string name="hint_senha">Senha</string>
    <string name="dialog_config_location_negative">Não foi possível localizar</string>
    <string name="dialog_config_location_title">Localização</string>
    <string name="dialog_config_location_msg">Desejamos saber sua localização</string>
    <string name="dialog_config_location_positive">Dispositivo localizado</string>
    <string name="hint_dataNascimento">Data de Nascimento</string>
    <string name="hint_ddd">DDD</string>
    <string name="hint_telefone">Telefone</string>
    <string name="hint_endereco">Logradouro</string>
    <string name="hint_numero">Número residencial</string>
    <string name="hint_bairro">Bairro</string>
    <string name="hint_cidade">Cidade</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_estado">Estado</string>
    <string name="hint_pais">País</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="perfil">Meu perfil</string>
    <string name="mais_tarde">Mais tarde</string>
    <string name="enviar">ENVIAR</string>
    <string name="title_login_erro">Aviso</string>
    <string name="msg_erro_login">Falha ao tentar fazer o login com o google, verifique sua conexão e tente novamente.</string>
    <string name="sim">Sim</string>
    <string name="carregando">carregando...</string>
    <string name="title_activity_completar_perfil">CompletarPerfilActivity</string>
    <string name="toast_completar">Preencha suas informações corretamente</string>
    <string name="msg_erro_enviar">Falha ao tentar enviar informações, verifique sua conexão e tente novamente.</string>
    <string name="editar">Editar</string>
    <string name="hint_data">Data</string>
    <string name="noticias">Notícias</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="title_activity_detalhe_noticia">DetalheNoticiaActivity</string>
    <string name="curtir">Curtir</string>
    <string name="data_hora_format">dd/MM/yyyy HH:mm</string>
    <string name="comentar">Comentar</string>
    <string name="mais_comentarios">⬇ Exibir todos os comentários ⬇</string>
    <string name="galeria">Galeria</string>
    <string name="compartilhar">Compartilhar</string>
    <string name="deseja_fazer_login">Você precisar fazer o login. Deseja fazer login?</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_aqwq">Falha ao tentar acessar notícia, verifique sua conexão com a internet e tente novamente.</string>
    <string name="title_activity_detralhe_noticia">DetralheNoticiaActivity</string>
    <string name="curtido">CURTIDO</string>
    <string name="title_activity_listar_todos_comentarios">ListarTodosComentarios</string>
    <string name="escreva_um_comentario">Escreva um comentário...</string>
    <string name="deseja_exclir">Deseja realmente excluir o cometário?</string>
    <string name="avalie">Avaliar</string>
    <string name="page">Curta nosso Facebook</string>
    <string name="link_page">https://www.facebook.com/ProjectMicrocefalia</string>
    <string name="erro_internet">Falha ao carregar...</string>
    <string name="compartilhar_main">"Olha o app sobre microcefalia que encontrei para Android. Baixa aí:"</string>
    <string name="title_activity_hospital">Centros especializados</string>
    <string name="ligar">Ligar</string>
    <string name="title_activity_forum">Fórum</string>
    <string name="rota">" Como chegar"</string>
    <string name="ic_n_forum">Novo fórum</string>
    <string name="titulo">Título:</string>
    <string name="msg">descrição:</string>
    <string name="txt_dialog">Novo fórum.</string>
    <string name="cancelar">Cancelar</string>
    <string name="title_activity_topicos_forum_adapter">TopicosForumAdapter</string>
    <string name="ativo">Aberto</string>
    <string name="status">"Status: "</string>
    <string name="d_abertura">"Data de Abertura: "</string>
    <string name="data">DD/MM/YYYY</string>
    <string name="fechado">Fechado</string>
    <string name="usuario">"Usuário: "</string>
    <string name="title_activity_forum_msg">Fórum</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_msg">adicionar Mensagem</string>
    <string name="moderador">"Fechado por: "</string>
    <string name="d_fechamento">Data de encerramento:</string>
    <string name="especialidade">Especialidade:</string>
    <string name="data_resposta">Data da resposta</string>
</resources>