<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/img_foto"
        android:layout_width="@dimen/foto_list"
        android:layout_height="@dimen/foto_list" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_Titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Título"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txt_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Usuário"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/d_abertura" />
            <TextView
                android:id="@+id/txt_data"
                android:text="@string/data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/status" />

            <TextView
                android:id="@+id/txt_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ativo" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>