<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_completar_perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mobi.redemicro.CompletarPerfilActivity"
    tools:showIn="@layout/activity_completar_perfil">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/mais_tarde"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/mais_tarde" />

            <!--<ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/sing_in_foto"
                android:layout_height="@dimen/sing_in_foto"
                android:layout_gravity="center"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark_normal" />

            <TextView
                android:id="@+id/perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/email"
                android:layout_alignRight="@+id/email"
                android:layout_below="@+id/imageView"
                android:layout_gravity="center"
                android:fontFamily="sans-serif"
                android:text="Perfil"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textSize="@dimen/text_title" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/perfil"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="E-mail"
                android:textSize="@dimen/text_sub_title" /> -->

            <Button
                android:text="Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/data" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilDdd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_ddd"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ddd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="2" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilTelefone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_telefone"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telefone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="10" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilLogradouro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_endereco"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/logradouro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilNumero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_numero"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="6" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilBairro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_bairro"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bairro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_cidade"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="100" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilCep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_cep"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="9" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilEstado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_estado"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/margin_top_edit"
                android:hint="@string/hint_pais"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:textAppearance="@android:style/TextAppearance.Small">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pais"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="2" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/blue_700"
                android:text="@string/enviar"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
